--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=8f1300b9d94e0aaef3d944efea33f41d",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7d8ad5cb9c940"
 }
